# tree-sitter-firm

./: Cargo.toml  README.md  grammar.js  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
