[package]
name = "tree-sitter-firm"
description = "DSL parsing and generation for Firm business entities."
version = "0.1.0"
authors = ["42futures <daniel@42futures.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "firm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/42futures/firm-lang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
